
	* fish/src/scm-procedures.h, fish/src/scm-procedures.c
	(ex_get_bmc_info): Remove function.

	* bmc-info/src/bmc-info.c (display_get_device_id),
	fish/src/scm-procedures.c (ex_get_sdr_repository_info,
	ex_get_pef_info): Adjust appropriately for ipmi_error() removal .

	* libfreeipmi/src/ipmi-sol-cmds.c: Fix
	tmpl_cmd_get_sol_configuration_parameters_sol_payload_port_number_rs
	template bug.

	BMC-Config fixes galore

	* Globally use libfreeipmi/include definitions, not hardcoded values.

	* bmc-config/src/bmc-sol-conf-section.c
	(character_accumulate_interval_validate): Fix range check.

	* Globally support keyvalue flags.

	* bmc-config/src/bmc-checkout.c (bmc_checkout_file): Use flags to
	automatically comment out certain keys.

	* bmc-config/src/bmc-user-sections.c (password20_checkout): Ensure
	Password20 is a reasonable checkoutable value.

2006-07-20  Albert Chu <chu11@llnl.gov>

	* fish/extensions/sensors-simple-display.scm
	(sensors-display-simple): Don't output event sensors.

	* common/src/ipmi-sensor-api.c (get_sensor_reading): Output debug
	info when a record isn't supported for sensor readings.
	
2006-07-21  A Balamurugan  <bala@zresearch.com>

	* libfreeipmi/src/udm/ipmi-ssif-api-udm.c (ipmi_ssif_cmd_udm):
	fixed bug of calling ipmi_ssif_read().

2006-07-20  Albert Chu <chu11@llnl.gov>

	* common/src/ipmi-sensor-api.c, common/src/ipmi-sel-api.c,
	ipmi-sel/src/ipmi-sel-wrapper.c: Fix compile bugs.

	* libfreeipmi/src/ipmi-sensor-cmds.c (ipmi_get_threshold_message):
	Fix backwards logic bug.

	* fish/extensions/sensors-simple-display.scm
	(sensors-display-simple-full-record),
	fish/extensions/sensors-verbose-display.scm
	(sensors-display-verbose-full-record),
	fish/extensions/sensors-very-verbose-display.scm
	(sensors-display-very-verbose-full-record): Fix output bug.

	* fish/src/scm-procedures.h: Remove lingering sel code.
	
	Remove ipmi-sel API common lib .

	* common/src/ipmi-sel-api.h, common/src/ipmi-sel-api.c: Remove files.
