@@ -79,6 +79,9 @@
 	tmpl_cmd_get_sol_configuration_parameters_sol_payload_port_number_rs
 	template bug.
 
+	* common/src/argp-common.h, bmc-config/src/bmc-argp.c,
+	ipmi-raw/src/ipmi-raw-argp.c: Fix help output ordering.
+
 	BMC-Config fixes galore
 
 	* Globally use libfreeipmi/include definitions, not hardcoded values.
